# open_ptrack_v2

./: .gitignore  CHANGELOG.md  README.md
body_pose_estimation/: CMakeLists.txt  package.xml
body_pose_estimation/src/: skeleton_base.cpp
body_pose_recognition/body_pose_recognition/: CMakeLists.txt  package.xml
body_pose_recognition/pose_recognition/: CMakeLists.txt  package.xml
body_pose_recognition/standard_pose/: CMakeLists.txt  package.xml
detection/: CMakeLists.txt  CMakeLists.txt~  package.xml
detection/apps/: ground_based_people_detector_node.cpp  ground_based_people_detector_node_sr.cpp  ground_based_people_detector_node_zed.cpp  haardispada_nodelet.cpp  multiple_objects_detection_node.cpp  zed_rot.cpp
detection/conf/: ground_based_people_detector_kinect1.yaml  ground_based_people_detector_kinect2.yaml  ground_based_people_detector_realsense.yaml  ground_based_people_detector_zed.yaml  ground_camera_color_optical_frame.txt  ground_kinect01_ir_optical_frame.txt  ground_kinect01_rgb_optical_frame.txt  ground_kinect02_ir_optical_frame.txt  ground_kinect02_rgb_optical_frame.txt  ground_kinect2_head_ir_optical_frame.txt  ground_kinect_01_ir_optical_frame.txt  ground_real01_color_optical_frame.txt  ground_realsense_head_color_optical_frame.txt  ground_zed_left_camera_frame.txt  motionControlPhone.txt  motionControlTag.txt  multiple_objects_detection.yaml
detection/launch/: .skeleton_detector_zed.launch.swp  camera_poses.txt  detection_node_Kinect_1.launch  detection_node_kinect01.launch  detection_node_kinect02.launch  detection_node_kinect06.launch  detection_node_kinect_01.launch  detection_node_real01.launch  detection_node_zed01.launch  detector_depth_kinect1.launch  detector_depth_kinect2.launch  detector_depth_real.launch  detector_depth_zed.launch  detector_kinect2.launch  detector_realsense.launch  detector_zed.launch  realsense_frames.launch  skeleton_detector.launch  skeleton_detector_kinect1.launch  skeleton_detector_realsense.launch  skeleton_detector_standalone.launch  skeleton_detector_zed.launch  zed_frames.launch
detection/src/: detection.cpp  haardispada.cpp  skeleton_detection.cpp  zed_rot.cpp
mr_room/: CMakeLists.txt  package.xml
mr_room/conf/: plane_detector.yaml
mr_room/file/: elaborated.pcd
mr_room/launch/: calib.launch  plane.launch
mr_room/src/: plane_detector.cpp  skeleton.cpp
opt_msgs/: CMakeLists.txt
opt_msgs/msg/: ARDevicePose.msg  ARDevicePoseArray.msg  ARDevicePoseEstimate.msg  ARDeviceRegistration.msg  ArcoreCameraFeatures.msg  ArcoreCameraImage.msg  Association.msg  Border.msg  BorderArray.msg  FeatureVectorArray.msg  KeyPoint.msg  NameArray.msg  OptarNtpMessage.msg  PosePredictionResult.msg  PoseRecognition.msg  PoseRecognitionArray.msg  SkeletonTrack.msg  SkeletonTrackArray.msg  StandardSkeletonTrack.msg  StandardSkeletonTrackArray.msg  Track.msg
opt_msgs/srv/: OPTSensor.srv
opt_utils/: CMakeLists.txt
opt_utils/apps/: ._ros2udp_converter_pose.cpp  cloud_manual_refinement.cpp  cloud_refinement.cpp  ros2udp_converter.cpp  ros2udp_converter_objects.cpp  ros2udp_converter_pose.cpp  ros2udp_converter_pose_backup.cpp  udp_listener.cpp
opt_utils/cfg/: ManualCalibration.cfg
opt_utils/conf/: json_udp.yaml
opt_utils/launch/: ._yolo-object-visualization-kinect2.launch  cloud_refinement.launch  manual_cloud_refinement.launch  multicamera_visualization.launch  multicamera_visualization_pose.launch  ros2udp_converter.launch  singlecamera_visualization.launch  yolo-object-visualization-kinect2.launch
optar/arcore/: CMakeLists.txt  package.xml  tracker___skeleton_tracks.txt
optar/optar/: .gitignore  CMakeLists.txt  package.xml
recognition/: .gitignore  CMakeLists.txt  README.md  package.xml
recognition/apps/: face_recognition_node.cpp  map_generation_node.cpp
recognition/cfg/: FaceDetection.cfg  FaceFeatureExtraction.cfg  FaceRecognition.cfg  RecognitionVisualization.cfg
recognition/data/: dlib_face_detector.data  dlib_face_detector16.data  dlib_face_detector2.data  dlib_face_detector4.data  dlib_face_detector8.data
recognition/install_scripts/: download_face_models.sh  install_all.sh  install_dlib.sh  install_openface.sh  install_torch.sh
recognition/launch/: face_detection_and_feature_extraction.launch
recognition/people/: ilyafaces  jefffaces  nataliefaces  natalietest  samfaces
recognition/scripts/: deliver_orobot_node.py  drag_and_drop.py  face_detection_node.py  face_feature_extraction_node.py  face_recognition_node.py  face_saver.py  open_face_recognition.py  recognition_utils.py  recognition_visualization_node.py  save_load_registered_features.py
recognition/srv/: OPTLoadRegisteredFaces.srv  OPTSetPredefinedFaces.srv
rtpose_wrapper/: CMakeLists.txt  Makefile  Makefile.config  Makefile.config.Ubuntu14.example  Makefile.config.Ubuntu16.example  README.md  package.xml
rtpose_wrapper/apps/: rtpose.cpp
rtpose_wrapper/cfg/: Joints.cfg
rtpose_wrapper/conf/: kinect2_params.yaml  webcam_params.yaml
rtpose_wrapper/launch/: kinect2.launch  webcam.launch
rtpose_wrapper/msg/: Joint2DMsg.msg  Joint3DMsg.msg  SkeletonArrayMsg.msg  SkeletonMsg.msg
rtpose_wrapper/tools/: CMakeLists.txt
tracking/: CMakeLists.txt  package.xml
tracking/apps/: skeleton_tracker_node.cpp  tracker_node.cpp  tracker_node_3d.cpp  tracker_object_node.cpp
tracking/cfg/: MovingAverageSmoother.cfg  SkeletonTracker.cfg  Tracker.cfg
tracking/conf/: MultiCameraTracking.rviz  SingleCameraTracking.rviz  demo.rviz  multicamera_tracking.rviz  multicamera_tracking_big.rviz  object-tracking-tv3.rviz  object_tracker_multicamera.yaml  pose_detection_overhead.rviz  skeleton_tracker_network.yaml  skeleton_tracker_single.yaml  tracker.yaml  tracking.rviz  yolo-object.rviz
tracking/launch/: object_tracker_single.launch  single_camera_tracking_node.launch  single_camera_tracking_node_azure.launch  single_camera_tracking_node_kinect1.launch  single_camera_tracking_node_kinect2.launch  single_camera_tracking_node_realsense.launch  tracker3d.launch  (+6 more)
yolo_detector/: .gitignore  CMakeLists.txt  get_obj_cfg.sh  package.xml
(+491 files in other folders)
