<?xml version="1.0"?>
<package>
  <name>yolo_detector</name>
  <version>0.0.0</version>
  <description>The yolo_detector package</description>


  <maintainer email="remap@todo.com">remap1604</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_filters</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>opt_msgs</build_depend>
  <build_depend>opt_utils</build_depend>  

  <run_depend>message_filters</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>opt_msgs</run_depend>
  <run_depend>opt_utils</run_depend>

</package>
