<?xml version="1.0"?>
<package>
  <name>body_pose_recognition</name>
  <version>0.0.0</version>
  <description>Library for body pose recognition</description>

  <maintainer email="carraromarco89@gmail.com">Marco Carraro</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
